--- a/src/app/components/pages/job-details-page/job-details-page.component.html
+++ b/src/app/components/pages/job-details-page/job-details-page.component.html
@@ -125,7 +125,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="widget-item">
+                    <!-- <div class="widget-item">
                         <div class="job-company">
                             <img src="assets/images/job/job1.jpg" alt="job-image">
                             <div class="title">
@@ -184,7 +184,7 @@
                                 </ul>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
