changed email -> phone

--- a/src/app/components/common/recent-jobs/recent-jobs.component.html
+++ b/src/app/components/common/recent-jobs/recent-jobs.component.html
@@ -58,7 +58,7 @@
             </div>
 
 
-            <!-- <div class="col-lg-6 col-sm-6 col-md-6">
+            <div class="col-lg-6 col-sm-6 col-md-6">
                 <div class="job-card">
                     <div class="content">
                         <div class="job-image">
@@ -82,7 +82,7 @@
                     </div>
                     <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
                 </div>
-            </div> -->
+            </div>
 
 
             <!-- <div class="col-lg-6 col-sm-6 col-md-6">
