--- a/src/app/components/pages/emp-account/emp-account.html
+++ b/src/app/components/pages/emp-account/emp-account.html
@@ -24,8 +24,8 @@
                     <h2>Login</h2>
                     <form>
                         <div class="form-group">
-                            <label>Email</label>
-                            <input type="text" class="form-control" id="mobile_number" placeholder="Enter your Email">
+                            <label>Mobile Number</label>
+                            <input type="number" class="form-control" id="mobile_number" placeholder="Enter your Mobile Number">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
