--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -25,7 +25,7 @@
                             Find Jobs
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="javascript:void(0)" class="dropdown-toggle nav-link">
                             Companies
                         </a>
@@ -43,8 +43,8 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                    <!-- <li class="nav-item">
                         <a href="javascript:void(0)" class="dropdown-toggle nav-link">
                             Candidates
                         </a>
@@ -62,9 +62,9 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
-                    <li class="nav-item">
-                        <!-- <a href="javascript:void(0)" class="dropdown-toggle nav-link">
+                    </li> -->
+                    <!-- <li class="nav-item">
+                        <a href="javascript:void(0)" class="dropdown-toggle nav-link">
                             Pages
                         </a> -->
                         <!-- <ul class="dropdown-menu">
@@ -123,9 +123,9 @@
                                     404 Error Page
                                 </a>
                             </li>
-                        </ul> -->
-                    </li>
-                    <li class="nav-item">
+                        </ul> 
+                    </li>-->
+                    <!-- <li class="nav-item">
                         <a href="javascript:void(0)" class="dropdown-toggle nav-link">
                             Blog
                         </a>
@@ -143,7 +143,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
                 <ul class="navbar-nav for-responsive">
                     <li class="nav-item">
@@ -158,7 +158,7 @@
                             Find Jobs
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="javascript:void(0)" class="dropdown-toggle nav-link">
                             Companies
                         </a>
@@ -195,7 +195,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <!-- <li class="nav-item">
                         <a href="javascript:void(0)" class="dropdown-toggle nav-link">
                             Pages
@@ -294,6 +294,9 @@
 
                         <a *ngIf="isUserLoggedIn;" (click)="logout()" class="default-btn" style="margin-left: 10px;">
                             <i class="ri-user-3-line"></i> Logout
+                        </a>
+                        <a *ngIf="isUserLoggedIn;" class="" style="margin-left: 10px; width: fit-content;">
+                            <img src="https://icones.pro/wp-content/uploads/2021/02/icone-utilisateur-vert.png" alt="" srcset="" style="max-height: 50px;">
                         </a>
                     </div>
                 </div>
