--- a/src/app/components/pages/candidate-account-page/my-account-page.component.html
+++ b/src/app/components/pages/candidate-account-page/my-account-page.component.html
@@ -26,8 +26,8 @@
                     <h2>Login</h2>
                     <form>
                         <div class="form-group">
-                            <label>Email</label>
-                            <input type="text" class="form-control" id="mobile_number" placeholder="Enter your Email">
+                            <label>Mobile Number</label>
+                            <input type="text" class="form-control" id="mobile_number" placeholder="Enter your Registered Mobile Number">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
