--- a/src/app/components/common/recent-jobs/recent-jobs.component.html
+++ b/src/app/components/common/recent-jobs/recent-jobs.component.html
@@ -20,7 +20,7 @@
                             </a>
                         </div>
 
-                        <h3> <a (click)="rJobidPass(rjob[1].id)" routerLink="/job-details" style="font-size: larger;"> {{ rjob[1].job_title }}</a></h3>
+                        <h3> <a (click)="rJobidPass(rjob[1].id)" routerLink="/job-details"> {{ rjob[1].job_title }}</a></h3>
                                 <ul class="job-list1" style="font-size: medium;">
 
                                     <li><i class="ri-briefcase-line"></i> {{rjob[1].career_level}} </li>
@@ -35,13 +35,16 @@
                                     <!-- <li><i class="ri-arrow-right-s-fill"></i> <a href="{{rjob[1].introduction_video_url}}">Video Url</a> </li> -->
                                     <!-- <li><i class="ri-arrow-right-s-fill"></i> Tags: {{rjob[1].job_tags}} </li> -->
                                     <!-- <li><i class="ri-map-pin-line"></i> {{job[1].office_address}}, {{job[1].location}}</li> -->
-                                
-                                </ul>
-                                <span><i class="ri-profile-line"></i>{{rjob[1].job_type}}</span>          
+                                    <li><i class="ri-profile-line"></i> {{rjob[1].job_type}}</li>
+                                    <hr>
+                                    <!-- <li><i class="ri-map-pin-line"></i> {{job[1].office_address}}, {{job[1].location}}</li> -->
+                                    <li style="text-align:right;"><i class="ri-wallet-line"></i> {{rjob[1].salary_minimum}} - {{rjob[1].salary_maximum}} / {{rjob[1].salary_type}} </li>
 
-                    <hr>
+                                </ul>
+                                <!-- <span><i class="ri-profile-line"></i>{{rjob[1].job_type}}</span>           -->
+
                     </div>
-                    <div class="price" style="text-align: right;"> {{rjob[1].salary_minimum}} - {{rjob[1].salary_maximum}} <span>/{{rjob[1].salary_type}}</span></div>
+                    <!-- <div class="price" style="text-align: right;"> {{rjob[1].salary_minimum}} - {{rjob[1].salary_maximum}} <span>/{{rjob[1].salary_type}}</span></div> -->
 
                     <!-- <div class="job-sub-content">
                         <ul class="job-list2">
