job-details ui changed

--- a/src/app/components/pages/job-details-page/job-details-page.component.css
+++ b/src/app/components/pages/job-details-page/job-details-page.component.css
@@ -1,4 +1,4 @@
-/* .job-card .content .job-list1 {
+.job-card .content .job-list1 {
   list-style-type: none;
   margin-bottom: 0;
   padding-left: 0;
@@ -389,4 +389,4 @@
 
 /* Min width 1200px to Max width 1399px */
 /* Min width 1600px */
-/*# sourceMappingURL=job-details-page.component.css.map */
+/*# sourceMappingURL=job-details-page.component.css.map
