Nav Bar Links Updated

--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -19,10 +19,16 @@
                             Home
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" *ngIf="!postajob;">
                         <a routerLink="/job-listings" class="nav-link" routerLinkActive="active"
                             [routerLinkActiveOptions]="{exact: true}">
                             Find Jobs
+                        </a>
+                    </li>
+                    <li class="nav-item" *ngIf="postajob;">
+                        <a routerLink="/job-listings" class="nav-link" routerLinkActive="active"
+                            [routerLinkActiveOptions]="{exact: true}">
+                            Jobs Posted
                         </a>
                     </li>
                     <!-- <li class="nav-item">
@@ -152,10 +158,16 @@
                             Home
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" *ngIf="!postajob;">
                         <a routerLink="/job-listings" class="nav-link" routerLinkActive="active"
                             [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
                             Find Jobs
+                        </a>
+                    </li>
+                    <li class="nav-item" *ngIf="postajob;">
+                        <a routerLink="/jobs-posted" class="nav-link" routerLinkActive="active"
+                            [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
+                            Jobs Posted
                         </a>
                     </li>
                     <!-- <li class="nav-item">
