job-details more details added

--- a/src/app/components/pages/job-details-page/job-details-page.component.html
+++ b/src/app/components/pages/job-details-page/job-details-page.component.html
@@ -90,7 +90,7 @@
                     <div class="widget-item">
                         <ul class="features-list">
                             <li>
-                                <span>Experience</span> {{ jobToArray[0][1].experience }}
+                                <span>Experience</span> {{ jobToArray[0][1].experience }} Years
                             </li>
                             <li>
                                 <span>Work Level</span> {{ jobToArray[0][1].career_level }}
@@ -104,7 +104,7 @@
                             </li>
 
                             <li>
-                                <span>Video Url</span> <a href="{{ jobToArray[0][1].allowed_genders }}">URL</a>
+                                <span>Video Url</span> <a href="{{ jobToArray[0][1].introduction_video_url}}">URL</a>
                             </li>
 
                             
