--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -20,7 +20,7 @@
 
             </ul>
             <div class="d-md-flex align-items-center justify-content-between">
-                <a href="mailto:shiromanivivan@gmail.com">
+                <a href="mailto:{{objToArray[0][1].email_id}}">
                     <div class="last-date">{{objToArray[0][1].email_id}}</div>
                 </a><br>
                 <a href="tel:+4733378901">
