candidate-details integrated v1

--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -23,11 +23,11 @@
                 <a href="mailto:{{objToArray[0][1].email_id}}">
                     <div class="last-date">{{objToArray[0][1].email_id}}</div>
                 </a><br>
-                <a href="tel:+4733378901">
+                <a href="tel:{{objToArray[0][1].mobile_number}}">
                     <div class="last-date">{{objToArray[0][1].mobile_number}}</div>
                 </a><br>
 
-                <a routerLink="/profile-authentication" class="default-btn">View My Profile</a>
+                <a routerLink="/candidate-details" class="default-btn">View My Profile</a>
             </div>
             <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
         </div>
